objects/JBCXM__Publish_Content__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__AccountID__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Publish Content</relationshipLabel>
        <relationshipName>Publish_Content</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>JBCXM__AppEventID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>App Events</label>
        <referenceTo>JBCXM__AppEvents__c</referenceTo>
        <relationshipLabel>Publish Content</relationshipLabel>
        <relationshipName>Publish_Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Event_Timestamp__c</fullName>
        <label>Event Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JBCXM__Message_Content__c</fullName>
        <label>Message Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>JBCXM__RecordId__c</fullName>
        <label>RecordId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Assigned User</relationshipLabel>
        <relationshipName>Assigned_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Publish Content</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Publish Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Publish Content</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>